--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                     <!-- Virtual Lab Setup -->
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="assets/images/virtual-lab-placeholder.jpg" alt="Virtual Lab Setup Screenshot">
+                            <img src="virtual-lab-placeholder.jpg" alt="Virtual Lab Setup Screenshot">
                             <div class="project-overlay">
                                 <div class="project-actions">
                                     <button class="btn-icon" title="View Details">
@@ -424,7 +424,7 @@
                     <!-- Wazuh SIEM -->
                     <div class="project-card featured">
                         <div class="project-image">
-                            <img src="assets/images/wazuh-siem-placeholder.jpg" alt="Wazuh SIEM Dashboard Screenshot">
+                            <img src="wazuh-siem-placeholder.jpg" alt="Wazuh SIEM Dashboard Screenshot">
                             <div class="project-overlay">
                                 <div class="project-actions">
                                     <button class="btn-icon" title="View Details">
@@ -477,7 +477,7 @@
                     <!-- PicoCTF Challenges -->
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="assets/images/picoctf-placeholder.jpg" alt="PicoCTF Challenge Solutions">
+                            <img src="picoctf-placeholder.jpg" alt="PicoCTF Challenge Solutions">
                             <div class="project-overlay">
                                 <div class="project-actions">
                                     <button class="btn-icon" title="View Details">
@@ -527,7 +527,7 @@
                     <!-- Network Security Lab -->
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="assets/images/network-security-placeholder.jpg" alt="Network Security Lab Setup">
+                            <img src="network-security-placeholder.jpg" alt="Network Security Lab Setup">
                             <div class="project-overlay">
                                 <div class="project-actions">
                                     <button class="btn-icon" title="View Details">
@@ -627,7 +627,7 @@
                     <!-- Incident Response Playbook -->
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="assets/images/incident-response-placeholder.jpg" alt="Incident Response Documentation">
+                            <img src="incident-response-placeholder.jpg" alt="Incident Response Documentation">
                             <div class="project-overlay">
                                 <div class="project-actions">
                                     <button class="btn-icon" title="View Details">
@@ -1160,3 +1160,4 @@
 </body>
 
 </html>
+
