--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
                             <div class="contact-details">
                                 <h4>LinkedIn</h4>
                                 <p>Professional Network</p>
-                                <a href="https://linkedin.com/in/JeromeWachira" class="contact-link" target="_blank" rel="noopener">Connect</a>
+                                <a href="https://linkedin.com/in/jerome-wachira" class="contact-link" target="_blank" rel="noopener">Connect</a>
                             </div>
                         </div>
                         
@@ -991,7 +991,7 @@
                             <div class="contact-details">
                                 <h4>GitHub</h4>
                                 <p>Code Repository</p>
-                                <a href="https://github.com/moneyj" class="contact-link" target="_blank" rel="noopener">Follow</a>
+                                <a href="https://github.com/jeromewachira" class="contact-link" target="_blank" rel="noopener">Follow</a>
                             </div>
                         </div>
                         
@@ -1160,4 +1160,5 @@
 </body>
 
 </html>
+
 
