--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,7 @@
                         <a href="https://linkedin.com/in/JeromeWachira" target="_blank" rel="noopener" aria-label="LinkedIn">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <a href="https://github.com/moneyj" target="_blank" rel="noopener" aria-label="GitHub">
+                        <a href="https://github.com/jeromewachira" target="_blank" rel="noopener" aria-label="GitHub">
                             <i class="fab fa-github"></i>
                         </a>
                         <a href="https://twitter.com/JCyberOps" target="_blank" rel="noopener" aria-label="Twitter">
@@ -1160,5 +1160,6 @@
 </body>
 
 </html>
+
 
 
